<resources>
    <string name="dominio">www.kingbets.net</string>
    <string name="dominio_upper">KINGBETS.NET</string>
    <string name="app_name">King Bets</string>
    <string name="app_name_upper">KING BETS</string>
    <string name="login_activity">KING BETS</string>
    <string name="x">x</string>
    <string name="verifica_perfil">Baixando dados do perfil&#8230;</string>
    <string name="validando_status">Validando o acesso&#8230;</string>
    <string name="action_cancelar">CANCELAR</string>
    <string name="action_compartilhar">COMPARTILHAR</string>
    <string name="action_imprimir">IMPRIMIR</string>
    <string name="action_https">HTTPS</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_autologin">Login automático</string>
    <string name="action_close">Fechar</string>
    <string name="action_exit">Sair</string>
    <string name="lb_qtd_apostas">Qtd. apostas:</string>
    <string name="lb_total_apurado">Total apurado:</string>
    <string name="lb_comissao">Comissão:</string>
    <string name="lb_depositar">Deposito:</string>
    <string name="lb_qtd_premios">Qtd. prêmios:</string>
    <string name="lb_total_pago_kingbets">KingBets:</string>
    <string name="lb_total_pago">Total:</string>
    <string name="lb_premio">Prêmio</string>
    <string name="lb_login">Login</string>
    <string name="lb_jogos">PARTIDAS</string>
    <string name="lb_campeonatos">CAMPEONATOS</string>
    <string name="lb_meu_perfil">FINANCEIRO</string>
    <string name="lb_clientes">CLIENTES</string>
    <string name="lb_meus_clientes">MEUS CLIENTES</string>
    <string name="lb_mais_odds">MAIS OPÇÕES</string>
    <string name="lb_nenhum_campeonato">NENHUM CAMPEONATO ENCONTRADO</string>
    <string name="lb_nenhum_cliente">NENHUM CLIENTE ENCONTRADO</string>
    <string name="lb_nenhuma_partida">NENHUMA PARTIDA ENCONTRADA</string>
    <string name="lb_nenhum_cupom">NENHUM BILHETE ENCONTRADO</string>
    <string name="lb_visualizar_cupom">VISUALIZAR BILHETE</string>
    <string name="lb_salvar_cupom">SALVAR BILHETE</string>
    <string name="lb_email">EMAIL</string>
    <string name="lb_contato">CONTATO</string>
    <string name="lb_codigo">CÓDIGO</string>
    <string name="lb_limite">LIMITE</string>
    <string name="lb_cupons">BILHETES</string>
    <string name="lb_caixa">CAIXA</string>
    <string name="lb_pontos">Pontos:</string>
    <string name="lb_vs">VS</string>
    <string name="lb_casa">CASA</string>
    <string name="lb_empate">EMPATE</string>
    <string name="lb_fora">FORA</string>
    <string name="lb_ambas">AMBAS</string>
    <string name="lb_principais">PRINCIPAIS</string>
    <string name="lb_1_2_tempo">1°/2° TEMPO</string>
    <string name="odd_resultado_final">RESULTADO FINAL</string>
    <string name="odd_dupla_chance">DUPLA CHANCE</string>
    <string name="odd_ambas_marcam">AMBAS MARCAM</string>
    <string name="odd_vencedor_ambas_marcam">RESULTADO FINAL - AMBAS MARCAM</string>
    <string name="odd_intervalo_final">INTERVALO - FINAL</string>
    <string name="odd_gols_par_ou_impar">TOTAL DE GOLS - PAR OU ÍMPAR</string>
    <string name="odd_gols_mais_ou_menos">TOTAL DE GOLS - MAIS OU MENOS</string>
    <string name="odd_placar_extato">PLACAR EXATO</string>
    <string name="odd_empate_anula_aposta">EMPATE ANULA APOSTA</string>
    <string name="odd_tempo_com_mais_gols">TEMPO COM MAIS GOLS</string>
    <string name="odd_faixa_de_gols">FAIXA DE GOLS NO JOGO</string>
    <string name="odd_casa_ganha_sem_levar_gols">CASA - GANHA SEM LEVAR GOLS?</string>
    <string name="odd_fora_ganha_sem_levar_gols">FORA - GANHA SEM LEVAR GOLS?</string>
    <string name="odd_resultado_p">1° TEMPO - RESULTADO</string>
    <string name="odd_resultado_s">2° TEMPO - RESULTADO</string>
    <string name="odd_dupla_chance_p">1° TEMPO - DUPLA CHANCE</string>
    <string name="odd_dupla_chance_s">2° TEMPO - DUPLA CHANCE</string>
    <string name="odd_ambas_marcam_p">1° TEMPO - AMBAS MARCAM</string>
    <string name="odd_ambas_marcam_s">2° TEMPO - AMBAS MARCAM</string>
    <string name="odd_gols_par_ou_impar_p">1° TEMPO - PAR OU ÍMPAR</string>
    <string name="odd_gols_par_ou_impar_s">2° TEMPO - PAR OU ÍMPAR</string>
    <string name="odd_gols_mais_ou_menos_p">1° TEMPO - GOLS MAIS OU MENOS</string>
    <string name="odd_gols_mais_ou_menos_s">2° TEMPO - GOLS MAIS OU MENOS</string>
    <string name="odd_placar_extato_p">1° TEMPO - PLACAR EXATO</string>
    <string name="lb_odd_casa_ou_empate">CASA OU EMPATE</string>
    <string name="lb_odd_fora_ou_empate">FORA OU EMPATE</string>
    <string name="lb_odd_casa_ou_fora">CASA OU FORA</string>
    <string name="lb_odd_ambas_marcam_sim">SIM</string>
    <string name="lb_odd_ambas_marcam_nao">NÃO</string>
    <string name="lb_odd_casa_sim">CASA - SIM</string>
    <string name="lb_odd_casa_nao">CASA - NÃO</string>
    <string name="lb_odd_fora_sim">FORA - SIM</string>
    <string name="lb_odd_fora_nao">FORA - NÃO</string>
    <string name="lb_odd_empate_sim">EMPATE - SIM</string>
    <string name="lb_odd_empate_nao">EMPATE - NÃO</string>
    <string name="lb_odd_casa_casa">CASA - CASA</string>
    <string name="lb_odd_casa_empate">CASA - EMPATE</string>
    <string name="lb_odd_casa_fora">CASA - FORA</string>
    <string name="lb_odd_empate_casa">EMPATE - CASA</string>
    <string name="lb_odd_empate_empate">EMPATE - EMPATE</string>
    <string name="lb_odd_empate_fora">EMPATE - FORA</string>
    <string name="lb_odd_fora_casa">FORA - CASA</string>
    <string name="lb_odd_fora_empate">FORA - EMPATE</string>
    <string name="lb_odd_fora_fora">FORA - FORA</string>
    <string name="lb_odd_impar">ÍMPAR</string>
    <string name="lb_odd_par">PAR</string>
    <string name="lb_odd_casa_ou_anula">CASA</string>
    <string name="lb_odd_fora_ou_anula">FORA</string>
    <string name="lb_odd_mais_05">MAIS DE 0.5</string>
    <string name="lb_odd_menos_05">MENOS DE 0.5</string>
    <string name="lb_odd_mais_15">MAIS DE 1.5</string>
    <string name="lb_odd_menos_15">MENOS DE 1.5</string>
    <string name="lb_odd_mais_25">MAIS DE 2.5</string>
    <string name="lb_odd_menos_25">MENOS DE 2.5</string>
    <string name="lb_odd_mais_35">MAIS DE 3.5</string>
    <string name="lb_odd_menos_35">MENOS DE 3.5</string>
    <string name="lb_odd_mais_45">MAIS DE 4.5</string>
    <string name="lb_odd_menos_45">MENOS DE 4.5</string>
    <string name="lb_odd_mais_55">MAIS DE 5.5</string>
    <string name="lb_odd_menos_55">MENOS DE 5.5</string>
    <string name="lb_odd_tempo_com_mais_gols_p">1° TEMPO</string>
    <string name="lb_odd_tempo_com_mais_gols_i">IGUAIS</string>
    <string name="lb_odd_tempo_com_mais_gols_s">2° TEMPO</string>
    <string name="lb_odd_faixa_de_gols_01">0 a 1</string>
    <string name="lb_odd_faixa_de_gols_23">2 a 3</string>
    <string name="lb_odd_faixa_de_gols_45">4 a 5</string>
    <string name="lb_odd_faixa_de_gols_M6">+ de 6</string>
    <string name="menu_partidas">PARTIDAS</string>
    <string name="menu_campeonatos">CAMPEONATOS</string>
    <string name="menu_clientes">CLIENTES</string>
    <string name="menu_conta">MINHA CONTA</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="btn_configs">CONFIGURAÇÕES</string>
    <string name="btn_tentar_novamente">TENTAR NOVAMENTE</string>
    <string name="btn_hoje">HOJE</string>
    <string name="btn_amanha">AMANHÃ</string>
    <string name="btn_proximos">PRÓXIMAS</string>
    <string name="btn_nacionais">NACIONAIS</string>
    <string name="btn_internacionais">INTERNACIONAIS</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="valor">Valor</string>
    <string name="apostador">Apostador</string>
    <string name="img_login_user">Icone de usuário da tela de login.</string>
    <string name="img_wifi_off">Icone que indica que o dispositive está sem conexão com a internet.</string>
    <string name="img_campeonato_flag">Mostra a bandeira do campeonato.</string>
    <string name="img_time_flag">Mostra a bandeira/brasão da equipe.</string>
    <string name="img_info_empty">Informa que o servidor não encontrou nenhum dado.</string>
    <string name="img_odd_mais">Icone que leva o usuário a todas as ODDS de uma partida.</string>
    <string name="no_conn_error_title">Sem conexão com a internet!</string>
    <string name="no_conn_error_body">
        Verifique se o Wi-fi ou Dados Módeis estão ligados!
        Você pode ir até as configurações para tivá-los, caso necessário!
    </string>
    <string name="bloqueio_error_title">Bloqueio!</string>
    <string name="bloqueio_error_body">
        Sua conta foi bloquada. Por favor, entre em contato com seu gerente!
    </string>
    <string name="deposito_error_title">Depósito pendente!</string>
    <string name="deposito_error_body">
        Se você já tiver efetuado o pagamento, entre em contato com o seu gerente e envie uma foto do comprovante!
    </string>
    <string name="cod_000_title">Erro desconhecido!</string>
    <string name="cod_000_body">
        O servidor retornou um código de erro que não pode ser processado pelo dispositivo!
    </string>
    <string name="cod_111_title">Erro interno!</string>
    <string name="cod_111_body">
        O aplicativo está tendo dificuldades para se conectar com o servidor!
    </string>
    <string name="cod_404_title">Url não encontrada!</string>
    <string name="cod_404_body">
        O dispositivo tentou se conectar com uma url que não existe no servidor!
    </string>
    <string name="cod_500_title">Erro interno no servidor!</string>
    <string name="cod_500_body">
        O servisor está com dificuldades para fornecer os dados. Tente novamente, mais tarde!
    </string>
    <string name="alert_http_response_empty">O servidor não enviou nenhuma resposta.</string>
    <string name="alert_http_000">O servidor não enviou nenhuma resposta.</string>
    <string name="alert_http_401">O email ou senha podem está incorretos.</string>
    <string name="alert_http_404">Não foi possível se conectar com o servidor.</string>
    <string name="alert_http_512">Erro no processamento da requisição.</string>
    <string name="alert_auth_ok">Autorizado!</string>
    <string name="alert_auth_error">Erro ao registrar as credenciais.</string>
    <string name="alert_db_empty">Erro ao recuperar os dados primários.</string>
    <string name="alert_email_empty">É necessário fornecer um email.</string>
    <string name="alert_password_empty">É necessário fornecer uma senha de 6 dígitos!</string>
    <string name="alert_invalid_credentials">Credenciais inválidas!</string>
    <string name="cupom_fake_dashes">--------------------------------------------------------------------------------</string>
    <string name="cupom_header_dashes">------------------------------------------</string>
    <string name="cupom_header_dashes_large">----------------------------------------------</string>
    <string name="cupom_aposta">APOSTA</string>
    <string name="cupom_aposta_cotacao">COTACAO</string>
    <string name="cupom_aposta_info">INFORMACOES DA APOSTA</string>
    <string name="cupom_codigo">CODIGO DO BILHETE:</string>
    <string name="cupom_data_hora">DATA DA APOSTA:</string>
    <string name="cupom_cambista">CAMBISTA:</string>
    <string name="cupom_contato">CONTATO:</string>
    <string name="cupom_apostador">APOSTADOR:</string>
    <string name="cupom_quant_jogos">QUANTIDADE DE JOGOS:</string>
    <string name="cupom_cotacao">COTACAO:</string>
    <string name="cupom_status">STATUS:</string>
    <string name="cupom_total_apostado">TOTAL APOSTADO:</string>
    <string name="cupom_possivel_retorno">POSSIVEL RETORNO:</string>
    <string name="cupom_regras">REGRAS - SUGESTOES - RECLAMACOES</string>
    <string name="cupom_acesse">ACESSE: WWW.KINGBETS.NET</string>
</resources>