<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.kingbets.cambista.view.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_https"
        android:orderInCategory="100"
        android:title="@string/action_https"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_autologin"
        android:orderInCategory="100"
        android:title="@string/action_autologin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_fechar"
        android:orderInCategory="100"
        android:title="@string/action_close"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />

</menu>
